--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 
 <head>
+	<meta name="google-site-verification" content="sgokU8hL0GhQbfOpAYhcAbjifDux6XNlpPCjf5XmiB8" />
 <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
 <meta name="description" content="description"/>
 <meta name="keywords" content="keywords"/> 
