--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <meta name="author" content="author"/> 
 <link rel="stylesheet" type="text/css" href="default.css" media="screen"/>
 <title>110310302 溫芊羽 作業1</title>
+	<meta name="description" content="這是溫芊羽作業1，包含程式碼和相關說明。">
+	<meta name="keywords" content="溫芊羽, 作業1, SEO, TDK">
 </head>
 
 <body>
